--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,15 @@
     "icons": {"128": "icon.png"},
 
     "background":{
-        "scripts": ["/scripts/background.js"]
+        "scripts": ["/scripts/background.js", "/scripts/jquery-3.3.1.min.js"]
     },
+
+    "content_security_policy": "script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js; object-src 'self'",
 
     "content_scripts":[
         {
             "matches": ["http://localhost/chevereto/*", "https://localhost/chevereto/*"],
-            "js": ["/scripts/content.js"]
+            "js": ["/scripts/content.js", "/scripts/jquery-3.3.1.min.js"]
         }
     ],
 
@@ -24,7 +26,8 @@
 
     "permissions":[
         "contextMenus",
-        "tabs"
+        "tabs",
+        "storage"
     ]
 
 }
