--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "icons": {"128": "icon.png"},
 
     "background":{
-        "scripts": ["/scripts/jquery-3.3.1.min.js", "/scripts/background.js"]
+        "scripts": ["/scripts/background.js"],
+        "persistent": true
     },
 
     "content_security_policy": "script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js; object-src 'self'",
@@ -30,7 +31,9 @@
     "permissions":[
         "contextMenus",
         "tabs",
-        "storage"
+        "storage",
+        "activeTab",
+        "<all_urls>"
     ]
 
 }
